tests/errors/references/assign_to_const_struct.duck
struct S = {
    val: Int,
} impl {};

fn main() {
    const s = S { val: 10 };
    s.val = 100;
}
